--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="index.js"></script>
     <div class="header">
       <img class="logo" src="company-logo-4.jpg" alt="Bucheli Logo" />
       <h1>BUCHELI WEB DEVELOPMENT</h1>
